force-app/main/default/objects/clofor_com_cfs__Employee__c/fields/clofor_com_cfs__Availableannualleave__c.field-meta.xml
<CustomField>
    <fullName>clofor_com_cfs__Availableannualleave__c</fullName>
    <formula>clofor_com_cfs__remainingannualleavecurrentyear__c +clofor_com_cfs__Remainingannualleaveoflast_year__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Available annual leave</label>
    <precision>18</precision>
    <scale>1</scale>
    <type>Number</type>
</CustomField>