force-app/main/default/objects/clofor_com_cfs__Employee__c/fields/clofor_com_cfs__BaseSalaryUSD__c.field-meta.xml
<CustomField>
    <fullName>clofor_com_cfs__BaseSalaryUSD__c</fullName>
    <label>BASE SALARY(USD)</label>
    <precision>18</precision>
    <scale>3</scale>
    <type>Number</type>
</CustomField>