force-app/main/default/objects/clofor_com_cfs__Employee__c/fields/clofor_com_cfs__Birthday__c.field-meta.xml
<CustomField>
    <fullName>clofor_com_cfs__Birthday__c</fullName>
    <label>BIRTH DAY</label>
    <required>true</required>
    <type>Date</type>
</CustomField>