force-app/main/default/objects/clofor_com_cfs__Employee__c/fields/clofor_com_cfs__BonusIncentivePolicy__c.field-meta.xml
<CustomField>
    <fullName>clofor_com_cfs__BonusIncentivePolicy__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>BONUS &amp; INCENTIVE POLICY</label>
    <referenceTo>clofor_com_cfs__BonusIncentivesPolicy__c</referenceTo>
    <relationshipLabel>EMPLOYEE</relationshipLabel>
    <relationshipName>EMPLOYEE</relationshipName>
    <type>Lookup</type>
</CustomField>