force-app/main/default/objects/clofor_com_cfs__Employee__c/fields/clofor_com_cfs__CategoryOfContractTerm__c.field-meta.xml
<CustomField>
    <fullName>clofor_com_cfs__CategoryOfContractTerm__c</fullName>
    <label>CATEGORY OF CONTRACT TERM</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Indefinite</fullName>
            </value>
            <value>
                <fullName>Seasonal</fullName>
            </value>
            <value>
                <fullName>Definite</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>