force-app/main/default/objects/clofor_com_cfs__Employee__c/fields/clofor_com_cfs__ContractStartDate__c.field-meta.xml
<CustomField>
    <fullName>clofor_com_cfs__ContractStartDate__c</fullName>
    <label>CONTRACT START DATE</label>
    <type>Date</type>
</CustomField>