force-app/main/default/objects/clofor_com_cfs__Employee__c/fields/clofor_com_cfs__ContractType__c.field-meta.xml
<CustomField>
    <fullName>clofor_com_cfs__ContractType__c</fullName>
    <label>CONTRACT TYPE</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>LaborContract</fullName>
                <label>Labor Contract</label>
            </value>
            <value>
                <fullName>ProbationContract</fullName>
                <label>Probation Contract</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>