force-app/main/default/objects/clofor_com_cfs__Employee__c/fields/clofor_com_cfs__defaultcurrentyearannualleave__c.field-meta.xml
<CustomField>
    <fullName>clofor_com_cfs__defaultcurrentyearannualleave__c</fullName>
    <formula>if(YEAR( clofor_com_cfs__ContractStartDate__c )=YEAR(TODAY()), MONTH(today())-MONTH( clofor_com_cfs__ContractStartDate__c )+1,MONTH(today())+0)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Default current year&apos;s annual leave</label>
    <precision>18</precision>
    <scale>1</scale>
    <type>Number</type>
</CustomField>