force-app/main/default/objects/clofor_com_cfs__Employee__c/fields/clofor_com_cfs__defaultpreviousyearannualleave__c.field-meta.xml
<CustomField>
    <fullName>clofor_com_cfs__defaultpreviousyearannualleave__c</fullName>
    <formula>IF(
YEAR(today())-YEAR( clofor_com_cfs__ContractStartDate__c )=1,
13-MONTH( clofor_com_cfs__ContractStartDate__c),0)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Meaning: The total number of last year&apos;s annual leave by default. This number is calculated from start date of Labor Contract.</inlineHelpText>
    <label>Default previous year&apos;s annual leave</label>
    <precision>18</precision>
    <scale>1</scale>
    <type>Number</type>
</CustomField>