force-app/main/default/objects/clofor_com_cfs__Employee__c/fields/clofor_com_cfs__Department__c.field-meta.xml
<CustomField>
    <fullName>clofor_com_cfs__Department__c</fullName>
    <label>DEPARTMENT</label>
    <length>30</length>
    <type>Text</type>
</CustomField>