force-app/main/default/objects/clofor_com_cfs__Employee__c/fields/clofor_com_cfs__Full_Name__c.field-meta.xml
<CustomField>
    <fullName>clofor_com_cfs__Full_Name__c</fullName>
    <label>FULL NAME</label>
    <length>255</length>
    <type>Text</type>
</CustomField>