force-app/main/default/objects/clofor_com_cfs__Employee__c/fields/clofor_com_cfs__GENDER__c.field-meta.xml
<CustomField>
    <fullName>clofor_com_cfs__GENDER__c</fullName>
    <label>GENDER</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>clofor_com_cfs__gender</valueSetName>
    </valueSet>
</CustomField>