force-app/main/default/objects/clofor_com_cfs__Employee__c/fields/clofor_com_cfs__GrossBaseSalaryPerMonthLocal__c.field-meta.xml
<CustomField>
    <fullName>clofor_com_cfs__GrossBaseSalaryPerMonthLocal__c</fullName>
    <label>GROSS BASE SALARY PER MONTH(LOCAL)</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>