force-app/main/default/objects/clofor_com_cfs__Employee__c/fields/clofor_com_cfs__GrossBaseSalaryPerMonthUSD__c.field-meta.xml
<CustomField>
    <fullName>clofor_com_cfs__GrossBaseSalaryPerMonthUSD__c</fullName>
    <label>GROSS BASE SALARY PER MONTH(USD)</label>
    <precision>18</precision>
    <scale>3</scale>
    <type>Number</type>
</CustomField>