force-app/main/default/objects/clofor_com_cfs__Employee__c/fields/clofor_com_cfs__HomeAddress__c.field-meta.xml
<CustomField>
    <fullName>clofor_com_cfs__HomeAddress__c</fullName>
    <label>HOME ADDRESS</label>
    <length>100</length>
    <type>Text</type>
</CustomField>