force-app/main/default/objects/clofor_com_cfs__Employee__c/fields/clofor_com_cfs__HomePhone__c.field-meta.xml
<CustomField>
    <fullName>clofor_com_cfs__HomePhone__c</fullName>
    <label>HOME PHONE</label>
    <type>Phone</type>
</CustomField>