force-app/main/default/objects/clofor_com_cfs__Employee__c/fields/clofor_com_cfs__ID_issued_by__c.field-meta.xml
<CustomField>
    <fullName>clofor_com_cfs__ID_issued_by__c</fullName>
    <label>ID issued by</label>
    <length>50</length>
    <type>Text</type>
</CustomField>