force-app/main/default/objects/clofor_com_cfs__Employee__c/fields/clofor_com_cfs__IdNumber__c.field-meta.xml
<CustomField>
    <fullName>clofor_com_cfs__IdNumber__c</fullName>
    <label>ID NUMBER</label>
    <length>30</length>
    <type>Text</type>
</CustomField>