force-app/main/default/objects/clofor_com_cfs__Employee__c/fields/clofor_com_cfs__JoinedDate__c.field-meta.xml
<CustomField>
    <fullName>clofor_com_cfs__JoinedDate__c</fullName>
    <label>JOINED DATE</label>
    <type>Date</type>
</CustomField>