force-app/main/default/objects/clofor_com_cfs__Employee__c/fields/clofor_com_cfs__Meal_Allowance__c.field-meta.xml
<CustomField>
    <fullName>clofor_com_cfs__Meal_Allowance__c</fullName>
    <label>Meal Allowance per Month</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>