force-app/main/default/objects/clofor_com_cfs__Employee__c/fields/clofor_com_cfs__MobilePhone__c.field-meta.xml
<CustomField>
    <fullName>clofor_com_cfs__MobilePhone__c</fullName>
    <label>MOBILE PHONE</label>
    <type>Phone</type>
</CustomField>