force-app/main/default/objects/clofor_com_cfs__Employee__c/fields/clofor_com_cfs__Nationality__c.field-meta.xml
<CustomField>
    <fullName>clofor_com_cfs__Nationality__c</fullName>
    <label>NATIONALITY</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Vietnam</fullName>
            </value>
            <value>
                <fullName>Cambodia</fullName>
            </value>
            <value>
                <fullName>Japan</fullName>
            </value>
            <value>
                <fullName>Korea</fullName>
            </value>
            <value>
                <fullName>China</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>