force-app/main/default/objects/clofor_com_cfs__Employee__c/fields/clofor_com_cfs__NumberofDependent__c.field-meta.xml
<CustomField>
    <fullName>clofor_com_cfs__NumberofDependent__c</fullName>
    <label>NUMBER OF DEPENDENT</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>