force-app/main/default/objects/clofor_com_cfs__Employee__c/fields/clofor_com_cfs__productivitysalaryp__c.field-meta.xml
<CustomField>
    <fullName>clofor_com_cfs__productivitysalaryp__c</fullName>
    <label>Productivity salary</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>