force-app/main/default/objects/clofor_com_cfs__Employee__c/fields/clofor_com_cfs__PromotionReviewDate__c.field-meta.xml
<CustomField>
    <fullName>clofor_com_cfs__PromotionReviewDate__c</fullName>
    <defaultValue>today()+730</defaultValue>
    <label>PROMOTION REVIEW DATE</label>
    <type>Date</type>
</CustomField>