force-app/main/default/objects/clofor_com_cfs__Employee__c/fields/clofor_com_cfs__Recruitment_CRM__c.field-meta.xml
<CustomField>
    <fullName>clofor_com_cfs__Recruitment_CRM__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Recruitment CRM</label>
    <referenceTo>clofor_com_cfs__Recruitment_CRM__c</referenceTo>
    <relationshipLabel>EMPLOYEE</relationshipLabel>
    <relationshipName>EMPLOYEE</relationshipName>
    <type>Lookup</type>
</CustomField>