force-app/main/default/objects/clofor_com_cfs__Employee__c/fields/clofor_com_cfs__Remainingannualleaveoflast_year__c.field-meta.xml
<CustomField>
    <fullName>clofor_com_cfs__Remainingannualleaveoflast_year__c</fullName>
    <description>Meaning: 
This number is calculated with formula: [ Default previous year&apos;s annual leave - Total annual leave used in the last year ] and it&apos;s automate change to 0 at 1st  April of Finance Year.</description>
    <label>Remaining annual leave of last year</label>
    <precision>18</precision>
    <scale>1</scale>
    <type>Number</type>
</CustomField>