force-app/main/default/objects/clofor_com_cfs__Employee__c/fields/clofor_com_cfs__Resetannualleavetoday__c.field-meta.xml
<CustomField>
    <fullName>clofor_com_cfs__Resetannualleavetoday__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Reset annual leave today</label>
    <type>Checkbox</type>
</CustomField>