force-app/main/default/objects/clofor_com_cfs__Employee__c/fields/clofor_com_cfs__STATUS__c.field-meta.xml
<CustomField>
    <fullName>clofor_com_cfs__STATUS__c</fullName>
    <label>STATUS</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Under Employment</fullName>
                <default>true</default>
                <label>Under Employment</label>
            </value>
            <value>
                <fullName>Out Of Employment</fullName>
            </value>
            <value>
                <fullName>Under Recruiting</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>