force-app/main/default/objects/clofor_com_cfs__Employee__c/fields/clofor_com_cfs__Totalannualleaveusedincurrentyear__c.field-meta.xml
<CustomField>
    <fullName>clofor_com_cfs__Totalannualleaveusedincurrentyear__c</fullName>
    <label>Total annual leave used in current year</label>
    <precision>18</precision>
    <scale>1</scale>
    <type>Number</type>
</CustomField>