force-app/main/default/objects/clofor_com_cfs__Employee__c/fields/clofor_com_cfs__totalannualleaveusedinthelastyear__c.field-meta.xml
<CustomField>
    <fullName>clofor_com_cfs__totalannualleaveusedinthelastyear__c</fullName>
    <inlineHelpText>Meaning:
This is the number of leave days that will be counted towards the leave of the previous year. Depending on personnel policy, this number may include holidays taken during the previous year, but may also include holidays for this year (before April of the fiscal year).</inlineHelpText>
    <label>Total annual leave used in the last year</label>
    <precision>18</precision>
    <scale>1</scale>
    <type>Number</type>
</CustomField>