force-app/main/default/objects/clofor_com_cfs__Employee__c/fields/clofor_com_cfs__UserAccountID__c.field-meta.xml
<CustomField>
    <fullName>clofor_com_cfs__UserAccountID__c</fullName>
    <formula>clofor_com_cfs__UserAccountName__c</formula>
    <label>USER ACCOUNT ID</label>
    <type>Text</type>
</CustomField>