force-app/main/default/objects/clofor_com_cfs__Employee__c/fields/clofor_com_cfs__UserContactName__c.field-meta.xml
<CustomField>
    <fullName>clofor_com_cfs__UserContactName__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>USER CONTACT NAME</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>EMPLOYEE</relationshipLabel>
    <relationshipName>EMPLOYEE</relationshipName>
    <type>Lookup</type>
</CustomField>