force-app/main/default/objects/clofor_com_cfs__Employee__c/fields/clofor_com_cfs__VisaType__c.field-meta.xml
<CustomField>
    <fullName>clofor_com_cfs__VisaType__c</fullName>
    <label>VISA TYPE</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Not Required</fullName>
            </value>
            <value>
                <fullName>Business Visa</fullName>
            </value>
            <value>
                <fullName>Tourist Visa</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>