force-app/main/default/objects/clofor_com_cfs__Employee__c/fields/clofor_com_cfs__WORKING_PERMIT__c.field-meta.xml
<CustomField>
    <fullName>clofor_com_cfs__WORKING_PERMIT__c</fullName>
    <defaultValue>false</defaultValue>
    <label>WORKING PERMIT</label>
    <type>Checkbox</type>
</CustomField>