force-app/main/default/objects/clofor_com_cfs__Employee__c/fields/clofor_com_cfs__WorkingType__c.field-meta.xml
<CustomField>
    <fullName>clofor_com_cfs__WorkingType__c</fullName>
    <label>WORKING TYPE</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>FULL TIME</fullName>
                <default>true</default>
                <label>FULL TIME</label>
            </value>
            <value>
                <fullName>PART TIMER</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>