force-app/main/default/objects/clofor_com_cfs__Employee__c/validationRules/clofor_com_cfs__USER_ACCOUNT_NAME_CHECK.validationRule-meta.xml
<ValidationRule>
    <fullName>clofor_com_cfs__USER_ACCOUNT_NAME_CHECK</fullName>
    <active>false</active>
    <errorConditionFormula>ISBLANK( clofor_com_cfs__UserAccountName__c )</errorConditionFormula>
    <errorDisplayField>clofor_com_cfs__UserAccountName__c</errorDisplayField>
    <errorMessage>USER ACCOUNT ID is required to manage Employee information in CloHRM.
Please choose the USER ACCOUNT which the employee is using. If there is no license, please contact AFR Sales Representative for purchasing the CloSCM license.</errorMessage>
</ValidationRule>