force-app/main/default/objects/clofor_com_cfs__Employee__c/listViews/clofor_com_cfs__All.listView-meta.xml
<ListView>
    <fullName>clofor_com_cfs__All</fullName>
    <columns>NAME</columns>
    <columns>clofor_com_cfs__EmployeeID__c</columns>
    <columns>clofor_com_cfs__Full_Name__c</columns>
    <columns>clofor_com_cfs__CloHRMStandard__c</columns>
    <columns>clofor_com_cfs__ContractID__c</columns>
    <columns>clofor_com_cfs__WorkingType__c</columns>
    <columns>clofor_com_cfs__ContractType__c</columns>
    <columns>clofor_com_cfs__ContractEndDate__c</columns>
    <columns>clofor_com_cfs__MobilePhone__c</columns>
    <columns>clofor_com_cfs__HomeAddress__c</columns>
    <columns>clofor_com_cfs__Birthday__c</columns>
    <columns>clofor_com_cfs__IdNumber__c</columns>
    <columns>clofor_com_cfs__Title__c</columns>
    <columns>clofor_com_cfs__Department__c</columns>
    <columns>clofor_com_cfs__Active__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
    <language>en_US</language>
</ListView>